--- a/app/views/projects/confirm_delete.html.erb
+++ b/app/views/projects/confirm_delete.html.erb
@@ -11,7 +11,7 @@
   <%= button_to "Confirm delete",
     project_path(project),
     method: :delete,
-    class: 'btn btn-danger add-right-margin' %>
+    class: "btn btn-danger add-right-margin" %>
 
   <%= link_to "Cancel", :back, class: "cancel-link" %>
 </div>
