--- a/app/views/tag_migrations/_bulk_tagging_history_table.html.erb
+++ b/app/views/tag_migrations/_bulk_tagging_history_table.html.erb
@@ -7,7 +7,7 @@
       <th></th>
       <th></th>
     </tr>
-    <%= render partial: 'shared/table_filter' %>
+    <%= render partial: "shared/table_filter" %>
   </thead>
   <tbody>
     <% tag_migrations.each do |tag_migration| %>
