--- a/app/views/tagging_history/index.html.erb
+++ b/app/views/tagging_history/index.html.erb
@@ -13,7 +13,7 @@
       <th>User</th>
     </tr>
 
-    <%= render partial: 'shared/table_filter' %>
+    <%= render partial: "shared/table_filter" %>
     </thead>
 
     <tbody>
