--- a/app/views/taggings/item_not_found.html.erb
+++ b/app/views/taggings/item_not_found.html.erb
@@ -1,4 +1,4 @@
-<%= display_header title: "Page not found", breadcrumbs: ["Tagging"] %>
+<%= display_header title: "Page not found", breadcrumbs: %w[Tagging] %>
 
 <p class='lead'>
   Sorry, that content item wasn't found. <%= link_to "Try searching again", lookup_taggings_path %>.
