--- a/app/views/taggings/show.html.erb
+++ b/app/views/taggings/show.html.erb
@@ -1,16 +1,16 @@
 <%= display_header title: "Add or remove tags from #{tagging_update.content_item.title}",
-  breadcrumbs: [link_to(t('navigation.tagging_content'), lookup_taggings_path), tagging_update.content_item] %>
+  breadcrumbs: [link_to(t("navigation.tagging_content"), lookup_taggings_path), tagging_update.content_item] %>
 
 <div class='view-on-site'>
-  View on site: <%= link_to tagging_update.content_item.base_path, website_url(tagging_update.content_item.base_path), target: "_blank" %>
+  View on site: <%= link_to tagging_update.content_item.base_path, website_url(tagging_update.content_item.base_path), target: "_blank", rel: "noopener" %>
 </div>
 
 <hr/>
 
 <%= render(
-  partial: 'tagging_form',
+  partial: "tagging_form",
   locals: {
     tagging_update: tagging_update,
-  }
+  },
 )
 %>
