--- a/app/views/taxons/_list.html.erb
+++ b/app/views/taxons/_list.html.erb
@@ -24,7 +24,7 @@
   <%= render partial: "list_children",
              locals: {
                page: page,
-               children: [page.taxonomy_size.nested_tree]
+               children: [page.taxonomy_size.nested_tree],
              }
   %>
 </ul>
