--- a/app/views/taxons/confirm_discard.html.erb
+++ b/app/views/taxons/confirm_discard.html.erb
@@ -10,7 +10,7 @@
   <%= button_to "Confirm delete",
   taxon_discard_draft_path(taxon.content_id),
   method: :delete,
-  class: 'btn btn-lg btn-success' %>
+  class: "btn btn-lg btn-success" %>
 
   <%= link_to "Cancel", taxon_path(taxon.content_id), class: "cancel-link" %>
 </div>
