--- a/app/views/taxons/confirm_publish.html.erb
+++ b/app/views/taxons/confirm_publish.html.erb
@@ -10,7 +10,7 @@
 <div class="confirmation-box">
   <%= button_to "Confirm publish",
   taxon_publish_path(taxon.content_id),
-  class: 'btn btn-lg btn-success' %>
+  class: "btn btn-lg btn-success" %>
 
   <%= link_to "Cancel", taxon_path(taxon.content_id), class: "cancel-link" %>
 </div>
