--- a/app/views/taxons/taxon_not_found.html.erb
+++ b/app/views/taxons/taxon_not_found.html.erb
@@ -1,4 +1,4 @@
-<%= display_header title: "Page not found", breadcrumbs: [t('navigation.taxons')] %>
+<%= display_header title: "Page not found", breadcrumbs: [t("navigation.taxons")] %>
 
 <p class='lead'>
   Sorry, that taxon wasn't found. <%= link_to "Try searching again", taxons_path %>.
