--- a/app/views/taxonomy/health_warnings/index.html.erb
+++ b/app/views/taxonomy/health_warnings/index.html.erb
@@ -41,7 +41,7 @@
       <th>Warning message</th>
     </tr>
 
-    <%= render partial: 'shared/table_filter' %>
+    <%= render partial: "shared/table_filter" %>
     </thead>
 
     <tbody>
